# DataDesigner

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  DCO  DEVELOPMENT.md  LITELLM_REMOVAL_ANALYSIS.md  Makefile  README.md  STYLEGUIDE.md  VERSIONING.md  _tmp_notes.md  conftest.py  crossfit_qa.py  crossfit_qa_preview.parquet  crossfit_qa_preview_annotations.json  dco-signatures.json  dependency-license-policy.toml  example.py  example_allow_resize.py  example_benchmark_strategies.py  example_multiturn.py  greptile.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  redirect.js  sample_config.yaml  sample_mcp_config.yaml  sample_preview.parquet  sample_preview_annotations.json  text_to_python_preview.parquet  text_to_python_preview_annotations.json  text_to_python_recipe_preview.parquet  text_to_python_recipe_preview_annotations.json  versions.json
.agents/: README.md
.agents/agents/: docs-searcher.md
.agents/recipes/: _fix-policy.md  _phase-audit.md  _phase-fix.md  _runner.md
.agents/tools/: structural_impact.py
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  development-task.yml  feature-request.yml
.github/workflows/: agentic-ci-authorized-checks.yml  agentic-ci-daily.yml  agentic-ci-health-probe.yml  agentic-ci-issue-triage.yml  agentic-ci-pr-review.yml  authorize-agentic-ci.yml  build-docs.yml  build-fern-docs.yml  build-notebooks.yml  build_docs.yml  check-colab-notebooks.yml  ci.yml  dco-assistant.yml  docs-preview-deploy.yml  docs-preview.yml  health-checks.yml  pack-tutorials.yml  pr-linked-issue.yml  pr-stale.yml  publish-devnotes.yml  publish-fern-devnotes.yml  semantic-pull-requests.yml
0.1.4/: 404.html  sitemap.xml
0.1.4/CONTRIBUTING/: index.html
0.1.4/installation/: index.html
0.1.4/notebook_source/: index.html
0.1.4/quick-start/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html  objects.inv  sitemap.xml
0.1.5/CONTRIBUTING/: index.html
0.1.5/installation/: index.html
0.1.5/notebook_source/: index.html
0.1.5/notebooks/: index.html
0.1.5/quick-start/: index.html
0.1.5/search/: search_index.json
0.2.0/: 404.html  sitemap.xml
0.2.0/installation/: index.html
0.2.0/search/: search_index.json
0.2.1/: index.html  sitemap.xml
0.2.1/CONTRIBUTING/: index.html
0.2.1/notebook_source/: index.html
0.2.2/: sitemap.xml
0.2.3/: objects.inv  sitemap.xml
0.3.1/: objects.inv  sitemap.xml
0.3.2/: index.html  sitemap.xml
0.3.3/: sitemap.xml
0.3.4/: objects.inv  sitemap.xml
0.3.5/: sitemap.xml
0.3.6/: objects.inv
0.3.7/: 404.html  sitemap.xml
0.3.8/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.1/: 404.html  index.html  objects.inv  sitemap.xml
0.5.2/: 404.html  index.html  sitemap.xml
0.5.3/: 404.html  index.html  objects.inv  sitemap.xml
0.5.4/: 404.html  index.html  sitemap.xml
0.5.5/: 404.html  index.html  objects.inv  sitemap.xml
0.5.6/: 404.html  index.html  sitemap.xml
0.5.7/: 404.html  sitemap.xml
0.5.8/: 404.html  index.html  sitemap.xml
0.5.9/: 404.html  index.html  objects.inv  sitemap.xml
0.6.0/: 404.html  index.html  sitemap.xml
CONTRIBUTING/: index.html
architecture/: agent-introspection.md  cli.md  config.md  dataset-builders.md  engine.md  mcp.md  models.md  overview.md  plugins.md  sampling.md
demo/data_designer_demo_processors/: README.md  demo_processor_plugins.py  pyproject.toml
demo/data_designer_demo_processors/notebooks/: demo_processors.py
demo/data_designer_demo_processors/src/data_designer_demo_processors/: __init__.py  download_model.py
demo/data_designer_demo_processors/src/data_designer_demo_processors/regex_filter/: __init__.py  config.py  impl.py  plugin.py
demo/data_designer_demo_processors/src/data_designer_demo_processors/semantic_dedup/: __init__.py  config.py  impl.py  plugin.py
demo/data_designer_demo_processors/tests/: test_regex_filter.py  test_semantic_dedup.py
demos/: __init__.py
docs/: RFC-FERN-MIGRATION.md  index.md  llms-full.txt  llms.txt  migration-async-default.md  quick-start.md
e2e_tests/: pyproject.toml
e2e_tests/src/data_designer_e2e_tests/plugins/column_generator/: config.py  impl.py  plugin.py
e2e_tests/src/data_designer_e2e_tests/plugins/seed_dataset/: config.py  impl.py  plugin.py
e2e_tests/tests/: test_e2e.py
elorian/: README.md  __init__.py  clevr_eval.py  clevr_regen.py  image_utils.py  judges.py  models.py  pipeline.py  run_example.py  s3_example.py
examples/: .gitignore  cli_back_demo.py  example.py  live_traffic_multi_model_demo.py  output.jsonl  progress_panel_demo.py
fern/: AGENTS.md  DEVNOTES-COMPONENTS-PLAN.md  DOCS-VS-FERN.md  README.md  docs.yml  fern.config.json  publish-metadata.json
installation/: index.html
latest/: 404.html
notebooks/: index.html
plans/: processor-plugins.md
quick-start/: index.html
reports/: async-scheduling-epic-benchmark-report.html  async-scheduling-idle-analysis.html  async-scheduling-idle-regression.html  ray_backend_architecture_report.html
reviews/: sample_config_annotations.json  sample_mcp_config_annotations.json
scripts/: add-license-headers.py  audit_package_dependencies.py  check_dependency_licenses.py  gen_ref_pages.py  health_checks.py  manage_agentic_ci_attempts.py  publish.sh  repro_create_hang_mock_llm.py  test_license_headers.py  update_license_headers.py
search/: search_index.json
skill/: README.md  test_info_scripts.py
tests/: conftest.py  test_import_perf.py  test_plugin_manager.py
tests/plugins/e2e/: pyproject.toml  test_e2e.py
tests_e2e/: pyproject.toml  test_dependency_license_check.py
(+2350 files in other folders)
