[project]
name = "data-designer-workspace"
dynamic = ["version"]
description = "DataDesigner monorepo workspace"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0.dev0"

[tool.uv.workspace]
members = [
    "packages/data-designer-config",
    "packages/data-designer-engine",
    "packages/data-designer",
]

[tool.uv]
package = false
required-version = ">=0.7.10"
dev-dependencies = [
    "pre-commit>=4.0.0,<5",
    "ruff>=0.14.10,<1",
]

[dependency-groups]
docs = [
    "mike>=2.1.3,<3",
    "mkdocs-jupyter>=0.25.1,<1",
    "mkdocs-material>=9.6.22,<10",
    "mkdocs-redirects>=1.2.2,<2",
    "mkdocs>=1.6.1,<2",
    "mkdocstrings-python>=1.18.2,<2",
    "mkdocstrings>=0.30.1,<1",
]
notebooks = [
    "datasets>=4.0.0,<5",
    "ipykernel>=6.29.0,<7",
    "jupyter>=1.0.0,<2",
    "pillow>=12.0.0,<13",
]

[tool.pytest.ini_options]
testpaths = [
    "packages/data-designer-config/tests",
    "packages/data-designer-engine/tests",
    "packages/data-designer/tests",
]
asyncio_default_fixture_loop_scope = "session"
env = ["DISABLE_DATA_DESIGNER_PLUGINS=true"]

[tool.coverage.run]
omit = ["**/engine/models/telemetry.py"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie (misc lints)
    "TID",   # flake8-tidy-imports (ban relative imports)
    "UP006", # List[A] -> list[A]
    "UP007", # Union[A, B] -> A | B
    "UP045", # Optional[A] -> A | None
]
ignore = [
    "ANN401", # Dynamically typed expressions (Any)
]

[tool.ruff.lint.isort]
known-first-party = ["data_designer", "data_designer_e2e_tests"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
