[project]
name = "data-designer-e2e-tests"

dependencies = [
  "data-designer",
  "pytest>=8.3.3,<9",
]

[project.entry-points."data_designer.plugins"]
test-column-generator = "data_designer.plugins.testing.e2e.column_generator_plugin.plugin"
test-seed-dataset = "data_designer.plugins.testing.e2e.seed_dataset_plugin.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
env = [
    "DISABLE_DATA_DESIGNER_PLUGINS=false",
]

# Using this command to test:
#
# uv run pytest -s -c tests/plugins/e2e/pyproject.toml tests/plugins/e2e/test_e2e.py::test_plugins_exist
#
# I've confirmed this pyproject.toml file is getting picked up because the print statements confirm
# entering the plugin registry's _discover method AND we get past the env var disable check.
# (Also, you can add an arbitrary env var to the env block above and print it from os.environ.)
# But the "data_designer.plugins" group is returning an empty list instead of the two plugins.
